// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverAutoLayoutSettings snapshots should render PreviewBoxSizing 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp PreviewBoxSizing undefined"
    data-test-box=""
  >
    <div
      class="css-1jnxvbp PreviewBoxSizing__tile-left"
      data-test-box=""
    >
      <div
        class="css-1jnxvbp PreviewBoxSizing__tile-children"
        data-test-box=""
      />
    </div>
    <div
      class="css-1jnxvbp PreviewBoxSizing__tile-right"
      data-test-box=""
    >
      <div
        class="css-1jnxvbp PreviewBoxSizing__tile-children"
        data-test-box=""
      />
    </div>
    <div
      class="css-1jnxvbp PreviewBoxSizing__stroke undefined"
      data-test-box=""
    />
  </div>
</DocumentFragment>
`;

exports[`PopoverAutoLayoutSettings snapshots should render when excluded 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp PreviewBoxSizing PreviewBoxSizing--excluded"
    data-test-box=""
  >
    <div
      class="css-1jnxvbp PreviewBoxSizing__tile-left"
      data-test-box=""
    >
      <div
        class="css-1jnxvbp PreviewBoxSizing__tile-children"
        data-test-box=""
      />
    </div>
    <div
      class="css-1jnxvbp PreviewBoxSizing__tile-right"
      data-test-box=""
    >
      <div
        class="css-1jnxvbp PreviewBoxSizing__tile-children"
        data-test-box=""
      />
    </div>
    <div
      class="css-1jnxvbp PreviewBoxSizing__stroke PreviewBoxSizing__stroke--excluded"
      data-test-box=""
    />
  </div>
</DocumentFragment>
`;
